--- a/notable.html
+++ b/notable.html
@@ -21,7 +21,7 @@
 		</ul>
 		</div>
 			<img src='ThinStage.png' style="width:100%;", class="parallax"></img>
-			<img src='ganpati1fade.png', style="width:100%", class="microphone"></img>
+			<img src='Ganpati1fade.png', style="width:100%", class="microphone"></img>
 			<h1 class="entry_title">Notable</h1>
 			
 			<p class="scrolltext">
