--- a/performances/recitals.html
+++ b/performances/recitals.html
@@ -20,7 +20,7 @@
 			
 		</ul>
 		</div>
-			<img src='../thinstage.png' style="width:100%;" class="parallax"></img>
+			<img src='../ThinStage.png' style="width:100%;" class="parallax"></img>
 			<img src='../mircopovfade.png' style="width:100%" class="microphone"></img>
 			<h1 class="entry_title">Photos from Annual Recitals</h1>
 			<br></br>
