--- a/performances/Kalavandan.html
+++ b/performances/Kalavandan.html
@@ -20,8 +20,8 @@
 			
 		</ul>
 		</div>
-			<img src='../thinstage.png' style="width:100%;" class="parallax"></img>
-			<img src='../bannerfade.png' style="width:100%" class="microphone"></img>
+			<img src='../ThinStage.png' style="width:100%;" class="parallax"></img>
+			<img src='../bannerFade.png' style="width:100%" class="microphone"></img>
 			<img src='../bigstagefade.png' style="width:100%" class="parallax2"></img>
 			<img src='../micromacrofade.png' style="width:100%" class="parallax3"></img>
 			<h1 class="entry_title">Kalavandan</h1>
